[project]
name = "packet_analyzer_tshark"
version = "0.1.0"
description = ""
authors = [
    {name = "Salmaan Saeed"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "pyshark (>=0.6,<0.7)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
